k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpf-cnpj-validator
spec:
  selector:
    app: cpf-cnpj-validator
  ports:
  - port: 80
    targetPort: 3030
  type: ClusterIP
