k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpf-cnpj-validator
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: validator.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cpf-cnpj-validator
            port:
              number: 80
